test/testdata/list/index_non_number_error.lox
var list = [];
list["foo"]; // error: index ("foo") must be a non-negative integer
